# optitrack-driver

./: .gitignore  BUILD  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  extensions.bzl  install-optitrack.sh  version.bzl
lcmtypes/: BUILD  BUILD.bazel  optitrack_data_descriptions_t.lcm  optitrack_forceplate_description_t.lcm  optitrack_forceplate_t.lcm  optitrack_frame_t.lcm  optitrack_marker_set_description_t.lcm  optitrack_marker_set_t.lcm  optitrack_marker_t.lcm  optitrack_rigid_body_description_t.lcm  optitrack_rigid_body_marker_description_t.lcm  optitrack_rigid_body_t.lcm  optitrack_skeleton_description_t.lcm  optitrack_skeleton_t.lcm
src/: BUILD  BUILD.bazel  optitrack_client.py
tools/: BUILD  BUILD.bazel  execute.bzl  generate_export_header.bzl  generate_file.bzl  lcm.BUILD  lcm.bzl  os.bzl  pathutils.bzl  pkg_config.BUILD.tpl  pkg_config.bzl  python.bzl
wheel/: BUILD.bazel
