# -*- python -*-
# This file contains rules for the Bazel build system; see https://bazel.build.

load("@rules_python//python:defs.bzl", "py_binary", "py_library")

licenses(["notice"])

package(default_visibility = ["//visibility:public"])

# Used by drake //:install target.
py_library(
    name = "optitrack_client_py",
    srcs = ["optitrack_client.py"],
    deps = [
        "//lcmtypes:py_optitrack_lcmtypes",
        "@lcm//:lcm-python",
    ],
)

py_binary(
    name = "optitrack_client",
    srcs = [":optitrack_client_py"],
    deps = [":optitrack_client_py"],
)
